--- a/facturascripts.ini
+++ b/facturascripts.ini
@@ -1,2 +1,4 @@
-version = 6
+version = 7
+version_url = 'https://raw.githubusercontent.com/FacturaScripts/dashboard_avanzado/master/facturascripts.ini'
+update_url = 'https://github.com/FacturaScripts/dashboard_avanzado/archive/master.zip'
 require = 'facturacion_base,adminlte'
