Muchas correcciones para que funcione sobre postgresql.

--- a/description
+++ b/description
@@ -1,1 +1,2 @@
-Accesible desde Admin &gt; Dashboard Avanzado
+Añade un dashboard con información detallada de compras, ventas, impuestos, desglose por familias, etc.
+<b>Accesible desde</b>: Admin &gt; Dashboard Avanzado
